<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peterson.trab.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastro"
        android:layout_marginStart="25dp"
        style="@style/estiloCampos"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNome"
        style="@style/estiloLabel"
        />
        
    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNome"
        style="@style/estiloCampos"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtIdade"
            style="@style/estiloLabel"
            />

    <EditText
        android:id="@+id/etIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintIdade"
        style="@style/estiloCampos"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEspecie"
            style="@style/estiloLabel"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spEspecie">

        </Spinner>

    </LinearLayout>

</ScrollView>
